--- a/Loan_Prediction_III_CatBoost.ipynb
+++ b/Loan_Prediction_III_CatBoost.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# This is a classification problem.\n",
-    "# CatBoost Algorithm will be used."
+    "# CatBoost Classifier Algorithm will be used."
    ]
   },
   {
